--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://artem5511.github.io/counter3",
-  "name": "counter3",
+  "homepage": "https://artem5511.github.io/counternew",
+  "name": "counternew",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
